# adaptive-echo

./: CONTRIBUTING.md  README.md
dataset-generator/: CMakeLists.txt  Makefile  Makefile.bat  README.md
dataset-generator/src/: Main.cpp
docs/: README.md  synthesizer-settings.md
plugin/: .gitignore  AGENTS.md  CMakeLists.txt  README.md
plugin/src/: PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp
python/: .gitignore  README.md  format.sh  pyproject.toml  test.sh
python/src/adaptive_echo/: __init__.py  audio.py  synth.py  test_audio.py  test_synth.py
