[project]
name = "adaptive-echo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tripp Lyons", email = "tripplyons@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jax>=0.7.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
]

[project.scripts]
adaptive-echo = "adaptive_echo:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
